[gd_scene load_steps=23 format=3 uid="uid://dfqlbu1qlp6vl"]

[ext_resource type="Script" uid="uid://cl85o6vh3j8jb" path="res://scripts/enemy_ant.gd" id="1_hlx46"]
[ext_resource type="Texture2D" uid="uid://cqwvlvuvxg451" path="res://assets/characters/enemy_ant.png" id="2_8h3ht"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8h3ht"]
atlas = ExtResource("2_8h3ht")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ne1j"]
atlas = ExtResource("2_8h3ht")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1n2v"]
atlas = ExtResource("2_8h3ht")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuvfl"]
atlas = ExtResource("2_8h3ht")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s75uu"]
atlas = ExtResource("2_8h3ht")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjcpj"]
atlas = ExtResource("2_8h3ht")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j6pc"]
atlas = ExtResource("2_8h3ht")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3mks"]
atlas = ExtResource("2_8h3ht")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjk78"]
atlas = ExtResource("2_8h3ht")
region = Rect2(512, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8cdr"]
atlas = ExtResource("2_8h3ht")
region = Rect2(576, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d4lo"]
atlas = ExtResource("2_8h3ht")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk6ok"]
atlas = ExtResource("2_8h3ht")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bak44"]
atlas = ExtResource("2_8h3ht")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6ljd"]
atlas = ExtResource("2_8h3ht")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_171yr"]
atlas = ExtResource("2_8h3ht")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbqti"]
atlas = ExtResource("2_8h3ht")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oth5y"]
atlas = ExtResource("2_8h3ht")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ne1j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h3ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ne1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1n2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuvfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s75uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjcpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j6pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3mks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjk78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8cdr")
}],
"loop": false,
"name": &"corrupted",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d4lo")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk6ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bak44")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_h6ljd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_171yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbqti")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_oth5y")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8h3ht"]
size = Vector2(14.449314, 20.561373)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pe0jf"]
size = Vector2(37.568222, 60.21546)

[node name="enemy_ant" type="CharacterBody2D"]
scale = Vector2(0.6920744, 0.6808883)
collision_layer = 4
script = ExtResource("1_hlx46")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.99999994, 1)
sprite_frames = SubResource("SpriteFrames_2ne1j")
animation = &"corrupted"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 20.561375)
scale = Vector2(0.9999999, 1)
shape = SubResource("RectangleShape2D_8h3ht")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.9999999, 1)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.7343349)
shape = SubResource("RectangleShape2D_pe0jf")

[node name="RayCastIzq" type="RayCast2D" parent="."]
scale = Vector2(0.9999999, 1)
target_position = Vector2(-24.563835, 0)

[node name="RayCastDere" type="RayCast2D" parent="."]
scale = Vector2(0.9999999, 1)
target_position = Vector2(27.4537, 0)

[node name="RayCastAbajoDere" type="RayCast2D" parent="."]
position = Vector2(14.449314, 0)
scale = Vector2(0.9999998, 1)
target_position = Vector2(-1.9073486e-06, 32.310734)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
